[gd_scene load_steps=20 format=2]

[ext_resource path="res://Resources/BG/1level.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/8-bit Arcade In.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/UI/Quit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=4]
[ext_resource path="res://Resources/Fonts/alagard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Devs.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/BG/2level.jpg" type="Texture" id=7]
[ext_resource path="res://Resources/BG/3level.png" type="Texture" id=8]
[ext_resource path="res://Resources/BG/4level.jpg" type="Texture" id=9]
[ext_resource path="res://Resources/UI/Options.tscn" type="PackedScene" id=10]
[ext_resource path="res://Resources/UI/FPS.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/UI/Console.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=6]
resource_name = "bgchange"
length = 41.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20, 30, 40 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/bgchange/bgchange:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10, 11, 15, 20, 21, 25, 30, 31, 35, 40, 41 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "titleanim"
length = 70.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TitleAnimation/Title:bbcode_text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9, 4, 6.1, 8, 11, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 48, 49, 53, 54, 55, 56, 57, 58, 59, 60 ),
"transitions": PoolRealArray( 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100 ),
"update": 1,
"values": [ " UNTITLED", "[shake rate=1 level=1] UNTITLED[/shake]", "[shake rate=2 level=2] UNTITLED[/shake]", "[shake rate=3 level=3] UNTITLED[/shake]", "[shake rate=4 level=4] UNTITLED[/shake]", "[shake rate=1000000 level=20] UNTITLED[/shake]", " UNTITLED", "[shake rate=1000000 level=20] UNTITLED[/shake]", " UNTITLED", "[shake rate=1000000 level=20] UNTITLED[/shake]", " UNTITLED", "[shake rate=1000000 level=20] UNTITLED[/shake]", " UNTITLED", "[shake rate=1000000 level=20] UNTITLED[/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=2] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=4] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=6] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=8] UNTITLED[/fade][/shake]", " UNTITLED", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=2] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=4] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=6] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=8] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=2] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=4] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=6] UNTITLED[/fade][/shake]", " UNTITLED", "[shake rate=1000000 level=30][fade start=0 length=8] UNTITLED[/fade][/shake]", " UNTITLED" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleAnimation/Title:custom_colors/default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 32 ),
"transitions": PoolRealArray( 100, 100 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleAnimation/Title:custom_colors/font_color_shadow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 32 ),
"transitions": PoolRealArray( 100, 100 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 268
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=3]
size = 134
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 134
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="StartScreen" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -240.0 ],
"_editor_description_": "title screen, other options..."
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgchange" type="AnimationPlayer" parent="Background"]
root_node = NodePath("../..")
autoplay = "bgchange"
anims/bgchange = SubResource( 6 )

[node name="bgchange" type="ColorRect" parent="Background/bgchange"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 1200.0
margin_bottom = 240.0
rect_min_size = Vector2( 1120, 200 )
hint_tooltip = "!"
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" parent="." instance=ExtResource( 11 )]

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 1200.0
margin_bottom = 640.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleHolder" type="GridContainer" parent="UI"]
margin_right = 1124.0
margin_bottom = 200.0
rect_min_size = Vector2( 1120, 200 )
mouse_filter = 2

[node name="TitleAnimation" type="AnimationPlayer" parent="UI/TitleHolder"]
autoplay = "titleanim"
anims/titleanim = SubResource( 2 )

[node name="Title" type="RichTextLabel" parent="UI/TitleHolder/TitleAnimation"]
margin_left = 80.0
margin_top = 40.0
margin_right = 1200.0
rect_min_size = Vector2( 1120, 200 )
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -5
custom_constants/shadow_offset_y = 15
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " UNTITLED"
visible_characters = 9
text = " UNTITLED"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="UI"]
margin_top = 204.0
margin_right = 1124.0
margin_bottom = 604.0
rect_min_size = Vector2( 1120, 400 )
mouse_filter = 2

[node name="Buttons" type="VBoxContainer" parent="UI/Menu"]
margin_right = 560.0
margin_bottom = 400.0
rect_min_size = Vector2( 560, 400 )
mouse_filter = 2

[node name="Test" type="Button" parent="UI/Menu/Buttons"]
visible = false
margin_right = 560.0
margin_bottom = 100.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "2"
flat = true

[node name="Name" type="RichTextLabel" parent="UI/Menu/Buttons/Test"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 1, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "      Test"
tab_size = 0
text = "      Test"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pseudo" type="Button" parent="UI/Menu/Buttons"]
margin_right = 560.0
margin_bottom = 100.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "2"
flat = true

[node name="Name" type="RichTextLabel" parent="UI/Menu/Buttons/Pseudo"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 1, 1, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "   Pseudo"
tab_size = 0
text = "   Pseudo"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="UI/Menu/Buttons"]
margin_top = 104.0
margin_right = 560.0
margin_bottom = 204.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Name" type="RichTextLabel" parent="UI/Menu/Buttons/Options"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 1, 0.647059, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "  Options"
tab_size = 0
text = "  Options"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update" type="VBoxContainer" parent="UI/Menu"]
margin_left = 564.0
margin_right = 1124.0
margin_bottom = 400.0
rect_min_size = Vector2( 560, 400 )
alignment = 2

[node name="Wish" type="Button" parent="UI/Menu/Update"]
visible = false
margin_right = 560.0
margin_bottom = 100.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
mouse_filter = 1
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="UI/Menu/Update/Wish"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = " Wish"
tab_size = 0
text = " Wish"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uniform" type="Button" parent="UI/Menu/Update"]
margin_right = 560.0
margin_bottom = 100.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0, 0, 0.588235 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="UI/Menu/Update/Uniform"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0.498039, 0, 1, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = " Uniform"
tab_size = 0
text = " Uniform"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Menu/Update"]
margin_top = 104.0
margin_right = 560.0
margin_bottom = 204.0
rect_min_size = Vector2( 560, 100 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="UI/Menu/Update/Quit"]
margin_right = 560.0
margin_bottom = 100.0
mouse_filter = 2
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = " Quit"
tab_size = 0
text = " Quit"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="UI/Menu/Update"]
margin_top = 208.0
margin_right = 560.0
margin_bottom = 400.0
rect_min_size = Vector2( 560, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Developer" type="RichTextLabel" parent="UI"]
margin_top = 608.0
margin_right = 1124.0
margin_bottom = 658.0
rect_min_size = Vector2( 1120, 50 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_text = "																														
																							
																							Developed by DUO GODZ"
text = "																														
																							
																							Developed by DUO GODZ"
scroll_active = false

[node name="Devs" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = -2.0
margin_right = 1280.0
margin_bottom = 718.0

[node name="QuitScene" parent="." instance=ExtResource( 3 )]

[node name="Options" parent="." instance=ExtResource( 10 )]

[node name="Console" parent="." instance=ExtResource( 12 )]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Buttons/Test" to="." method="_on_Test_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Buttons/Test" to="." method="_on_Test_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Buttons/Pseudo" to="." method="_on_Pseudo_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Buttons/Pseudo" to="." method="_on_Pseudo_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Buttons/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Update/Wish" to="." method="_on_Wish_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Update/Wish" to="." method="_on_Wish_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Update/Uniform" to="." method="_on_Uniform_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Update/Uniform" to="." method="_on_Uniform_pressed"]
[connection signal="mouse_entered" from="UI/Menu/Update/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="UI/Menu/Update/Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="UI/Developer" to="." method="_on_Developer_mouse_entered"]
[connection signal="mouse_exited" from="UI/Developer" to="." method="_on_Developer_mouse_exited"]
